# Rocketry-VT_MotorControl_v1.0.0

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  README.txt  config  cowsay.sh  infile.txt  launch.sh  make.sh  note.txt  output.txt
Data-Processing/: dataconvert.asv  dataconvert.m
Device-Sketch/: Adafruit_MAX31855.cpp  Adafruit_MAX31855.h  Assert.cpp  Assert.h  CHANGELOG.txt  Control.cpp  Control.h  Default_Config.cpp  Default_Config.h  Device-Sketch.h  Device-Sketch.ino  Hardware.cpp  Hardware.h  Test_FloatToBinary.h  Test_Transmission.cpp  Test_all.h  Test_main.cpp  Test_main.h  Transmission.cpp  XBee_IO.cpp  XBee_IO.h  control_main.cpp  control_main.h  stdafx.h
Device-Sketch/Desktop-tests-src/: Arduino.cpp  Arduino.h  Unit-Tests-PC.cpp
Device-Sketch/Hardware/: Hardware.cpp  Hardware.h
Device-Sketch/Tests/: Assert.cpp  Assert.h  Test_FloatToBinary.cpp  Test_Transmission.cpp  Test_main.cpp  stdafx.cpp
Device-Sketch/Tests.back/: Assert.cpp  Assert.h  Control.cpp  Control.h  Hardware.cpp  Hardware.h  Test_FloatToBinary.cpp  Test_FloatToBinary.h  Test_Transmission.cpp  Test_main.cpp  Test_main.h  Transmission.cpp  Transmission.h  stdafx.h
Device-Sketch/Tests/Tests/: Assert.h  Test_Transmission.cpp  Test_Transmission.h  Test_main.cpp
Documentation/: Computer_Based_Unit_Test_Instructions.txt  R@VT_Propulsion_Motor_Controller_ICD_1.0.0.docx
crap/: lexicon.cpp  packet.cpp
doc/: .~lock.High-Level-Hardware-Implementation.pptx#  Ground Control User Manual v2019.05.20.docx  High-Level-Hardware-Implementation.pptx  Sensors-Locations-And-Names.pptx
doc/logs/: LOG-2019-02-27-03-56-41.rvt  LOG-2019-02-27-03-56-41.txt
doc/logs/bb-stress/: LOG-2019-03-06-05-02-37-binary.txt  LOG-2019-03-06-05-02-37.rvt  LOG-2019-03-06-05-02-37.txt
doc/logs/example/: LOG-2019-02-27-03-56-41-binary.txt  LOG-2019-02-27-03-56-41.txt
doc/logs/stress-test/: LOG-2019-02-27-04-21-19-binary.txt  LOG-2019-02-27-04-21-19.rvt  LOG-2019-02-27-04-21-19.txt
gpio/: a.out  demo.cpp  gpio.cpp  make.sh
include/: Adafruit_MAX31855.h  Arduino.h  Assert.h  Default_Config.h  HX711.h  Hardware.h  Test_Transmission.h  Test_all.h  Transmission.h  XBee_IO.h  behavior.h  comms.h  config.h  control.h  control_main.h  filters.hpp  hardware.h  logging.h  motor.h  pin_driver.hpp  predicates.h  stdafx.h  timestamped.h  transmission.h
include/drivers/: analog_sensor.h  ematch.h  gpio.hpp  led.h  pressure_sensor.h  thermocouple.h
python/: bin2txt.py  packetify.py  randgen.py  rvtr.py  transmission.py
src/: Adafruit_MAX31855.cpp  Assert.cpp  Default_Config.cpp  Device-Sketch.ino  HX711.cpp  Hardware.cpp  Test_FloatToBinary.cpp  Test_all.cpp  Transmission.cpp  Transmission_Impl.cpp  XBee_IO.cpp  adctest.cpp  behavior.cpp  bin2txt.cpp  comms.cpp  config.cpp  control.cpp  control_main.cpp  filters.cpp  gpio.cpp  gpiotest.cpp  hardware.cpp  led.cpp  logging.cpp  main.cpp  motor.cpp  motor_demo.cpp  pack.cpp  pin_driver.cpp  predicates.cpp  rand.cpp  readin.cpp  transmission.cpp  transmission_impl.cpp
src/drivers/: adctest.cpp  analog_sensor.cpp  gpio.cpp  led.cpp  test.cpp
test/: Assert.cpp  Assert.h  Test_FloatToBinary.cpp  Test_FloatToBinary.h  Test_Transmission.cpp  Test_Transmission.h  Test_all.cpp  Test_all.h  Unit-Tests-PC.cpp
